--- a/Arcanum.UI/Components/UserControls/MainMenuScreen/RecentProjectCard.xaml
+++ b/Arcanum.UI/Components/UserControls/MainMenuScreen/RecentProjectCard.xaml
@@ -3,6 +3,8 @@
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:behaviors="clr-namespace:Arcanum.UI.Components.Behaviors"
              mc:Ignorable = "d"
              Width = "178"
              Height = "166">
@@ -33,8 +35,14 @@
             BorderThickness = "2"
             CornerRadius = "5"
             Margin = "0, 0, 35, 0"
-            Padding = "0"
-            MouseUp="CardBorder_MouseUp">
+            Padding = "0">
+        <b:Interaction.Behaviors>
+            <behaviors:ClickAndDoubleClickBehavior 
+                ClickCommand="{Binding LoadProjectCommand, RelativeSource={RelativeSource AncestorType=UserControl}}" 
+                DoubleClickCommand="{Binding LaunchArcanumCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                FireSingleClickOnDoubleClick="True"
+                />
+        </b:Interaction.Behaviors>
         <Grid Background = "Transparent"
               Margin = "0">
             <Grid.RowDefinitions>
