--- a/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
+++ b/Arcanum.UI/Components/Windows/MainWindows/MainWindow.xaml
@@ -1,15 +1,15 @@
 ﻿<styleClasses:BaseWindow x:Class = "Arcanum.UI.Components.Windows.MainWindows.MainWindow"
-                 xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                 xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
-                 xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
-                 xmlns:mainWindow = "clr-namespace:Arcanum.UI.Components.Views.MainWindow"
-                 Title = "Arcanum"
-                 Height = "1080"
-                 Width = "1920"
-                 FooterHeight = "30"
-                 HeaderHeight = "30"
-                 Loaded = "MainWindow_OnLoaded"
-                 WindowStartupLocation = "CenterScreen">
+                         xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                         xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
+                         xmlns:styleClasses = "clr-namespace:Arcanum.UI.Components.StyleClasses"
+                         xmlns:mainWindow = "clr-namespace:Arcanum.UI.Components.Views.MainWindow"
+                         Title = "Arcanum"
+                         Height = "1080"
+                         Width = "1920"
+                         FooterHeight = "26"
+                         HeaderHeight = "30"
+                         Loaded = "MainWindow_OnLoaded"
+                         WindowStartupLocation = "CenterScreen">
 
     <styleClasses:BaseWindow.DataContext>
         <mainWindow:MainWindowView />
@@ -115,7 +115,6 @@
                 <MenuItem Header = "Exit"
                           Command = "mainWindow:MwCommands.ExitArcanumCommand">
                 </MenuItem>
-                >
             </MenuItem>
 
             <MenuItem Header = "Edit">
@@ -157,14 +156,23 @@
             </MenuItem>
 
             <MenuItem Header = "Mod Diagnostics">
-                
+
                 <MenuItem Header = "Open Loading Log" />
             </MenuItem>
         </Menu>
     </styleClasses:BaseWindow.HeaderContent>
 
     <styleClasses:BaseWindow.FooterContent>
-        <TextBlock Text = "PerformanceCounters"> </TextBlock>
+        <StackPanel Orientation = "Horizontal">
+            <TextBlock
+                Text = "{Binding RamUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                Margin = "2, 0"
+                FontFamily = "{StaticResource DefaultMonospacedFont}" />
+            <TextBlock
+                Text = "{Binding CpuUsage,  RelativeSource={RelativeSource AncestorType=styleClasses:BaseWindow}}"
+                Margin = "2, 0"
+                FontFamily = "{StaticResource DefaultMonospacedFont}" />
+        </StackPanel>
     </styleClasses:BaseWindow.FooterContent>
 
     <Grid>
