--- a/Arcanum.UI/OldApp.xaml
+++ b/Arcanum.UI/OldApp.xaml
@@ -20,6 +20,7 @@
                 <ResourceDictionary Source="Components/Styles/Base/BaseTabControl.xaml" />
                 <ResourceDictionary Source="Components/Styles/Specific/StackPanelStyle.xaml" />
                 <ResourceDictionary Source="Components/Styles/Base/BaseToolTip.xaml" />
+                <ResourceDictionary Source="Components/Styles/Base/BaseGridSplitter.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
