Add context menu support to `RecentProjectCard` and refactor project descriptor handling
- Introduced "Remove From List" context menu option in `RecentProjectCard` for recent project management.
- Refactored `RecentProjectCard` to expose `ProjectFileDescriptor` as a public field and updated related bindings.
- Updated `ArcanumViewModel` to handle dynamic removal of recent projects from the UI.
- Added `BaseContextMenu` style for uniform context menu appearance.
- Adjusted XAML styling and resource management, including updates to `Program.cs` for resource registration.

--- a/Arcanum.UI/Components/Views/MainMenuScreen/ArcanumViewModel.xaml
+++ b/Arcanum.UI/Components/Views/MainMenuScreen/ArcanumViewModel.xaml
@@ -54,7 +54,9 @@
                                       Margin = "3"
                                       FontSize = "14"
                                       x:Name = "VanillaFolderTextBox"
-                                      Style = "{StaticResource BaseTextBoxStyle}">
+                                      Style = "{StaticResource BaseTextBoxStyle}"
+                                      VerticalScrollBarVisibility="Disabled"
+                                      TextWrapping="NoWrap">
         </styleClasses:CorneredTextBox>
 
 
@@ -95,7 +97,9 @@
                                       Margin = "3"
                                       FontSize = "14"
                                       x:Name = "ModFolderTextBox"
-                                      Style = "{StaticResource BaseTextBoxStyle}">
+                                      Style = "{StaticResource BaseTextBoxStyle}"
+                                      VerticalScrollBarVisibility="Disabled"
+                                      TextWrapping="NoWrap">
         </styleClasses:CorneredTextBox>
 
         <Border Grid.Column = "2"
